assignment2-initial/src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from /Users/ngogiaphong/Dev/PPL/assignment2-initial/src/main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'auto'", "'break'", "'boolean'", "'do'", "'else'", 
                     "'float'", "'for'", "'function'", "'if'", "'integer'", 
                     "'return'", "'string'", "'while'", "'void'", "'out'", 
                     "'continue'", "'of'", "'inherit'", "'array'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "<INVALID>", 
                     "<INVALID>", "':'", "'='", "'+'", "'-'", "'!'", "'::'", 
                     "'readInteger'", "'printInteger'", "'readFloat'", "'writeFloat'", 
                     "'readBoolean'", "'printBoolean'", "'readString'", 
                     "'printString'", "'super'", "'preventDefault'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "COMPARE", "ANDOR", "MULDIVMOD", "AUTO", 
                      "BREAK", "BOOLEAN", "DO", "ELSE", "FLOAT", "FOR", 
                      "FUNCTION", "IF", "INTEGER", "RETURN", "STRING", "WHILE", 
                      "VOID", "OUT", "CONTINUE", "OF", "INHERIT", "ARRAY", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", 
                      "RBRACKET", "SEMI", "COMMA", "QUOTE", "DQUOTE", "COLON", 
                      "ASSIGN", "ADD", "SUB", "CLAIM", "CONCAT", "READINTEGER", 
                      "PRINTINTEGER", "READFLOAT", "WRITEFLOAT", "READBOOLEAN", 
                      "PRINTBOOLEAN", "READSTRING", "PRINTSTRING", "SUPER", 
                      "PREVENTDEFAULT", "CSTYLE", "LINECOMMENT", "BOOLEANLIT", 
                      "IDENTIFIER", "INTLIT", "FLOATLIT", "DOT", "STRINGLIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_declarationList = 1
    RULE_declaration = 2
    RULE_varDeclaration = 3
    RULE_initVarDeclaration = 4
    RULE_fullVarDeclaration = 5
    RULE_baseVarDeclaration = 6
    RULE_helper = 7
    RULE_idList = 8
    RULE_atomicType = 9
    RULE_arrayType = 10
    RULE_voidType = 11
    RULE_autoType = 12
    RULE_dimensions = 13
    RULE_typeSpecifier = 14
    RULE_arrayCell = 15
    RULE_funcDeclaration = 16
    RULE_functionPrototype = 17
    RULE_returnType = 18
    RULE_parameters = 19
    RULE_parameterList = 20
    RULE_parameter = 21
    RULE_blockStatement = 22
    RULE_functionBody = 23
    RULE_statements = 24
    RULE_statementList = 25
    RULE_statement = 26
    RULE_assignmentStatement = 27
    RULE_leftHandSide = 28
    RULE_ifStatement = 29
    RULE_forStatement = 30
    RULE_whileStatement = 31
    RULE_doWhileStatement = 32
    RULE_breakStatement = 33
    RULE_continueStatement = 34
    RULE_returnStatement = 35
    RULE_callStatement = 36
    RULE_call = 37
    RULE_expressions = 38
    RULE_expressionList = 39
    RULE_expression = 40
    RULE_expression1 = 41
    RULE_expression2 = 42
    RULE_expression3 = 43
    RULE_expression4 = 44
    RULE_expression5 = 45
    RULE_expression6 = 46
    RULE_expression7 = 47
    RULE_expression8 = 48
    RULE_arrayLit = 49
    RULE_subExpression = 50
    RULE_callExpression = 51
    RULE_specialFunctionCall = 52
    RULE_readIntegerCall = 53
    RULE_printIntegerCall = 54
    RULE_readFloatCall = 55
    RULE_writeFloatCall = 56
    RULE_readBooleanCall = 57
    RULE_printBooleanCall = 58
    RULE_readStringCall = 59
    RULE_printStringCall = 60
    RULE_superCall = 61
    RULE_preventDefaultCall = 62

    ruleNames =  [ "program", "declarationList", "declaration", "varDeclaration", 
                   "initVarDeclaration", "fullVarDeclaration", "baseVarDeclaration", 
                   "helper", "idList", "atomicType", "arrayType", "voidType", 
                   "autoType", "dimensions", "typeSpecifier", "arrayCell", 
                   "funcDeclaration", "functionPrototype", "returnType", 
                   "parameters", "parameterList", "parameter", "blockStatement", 
                   "functionBody", "statements", "statementList", "statement", 
                   "assignmentStatement", "leftHandSide", "ifStatement", 
                   "forStatement", "whileStatement", "doWhileStatement", 
                   "breakStatement", "continueStatement", "returnStatement", 
                   "callStatement", "call", "expressions", "expressionList", 
                   "expression", "expression1", "expression2", "expression3", 
                   "expression4", "expression5", "expression6", "expression7", 
                   "expression8", "arrayLit", "subExpression", "callExpression", 
                   "specialFunctionCall", "readIntegerCall", "printIntegerCall", 
                   "readFloatCall", "writeFloatCall", "readBooleanCall", 
                   "printBooleanCall", "readStringCall", "printStringCall", 
                   "superCall", "preventDefaultCall" ]

    EOF = Token.EOF
    COMPARE=1
    ANDOR=2
    MULDIVMOD=3
    AUTO=4
    BREAK=5
    BOOLEAN=6
    DO=7
    ELSE=8
    FLOAT=9
    FOR=10
    FUNCTION=11
    IF=12
    INTEGER=13
    RETURN=14
    STRING=15
    WHILE=16
    VOID=17
    OUT=18
    CONTINUE=19
    OF=20
    INHERIT=21
    ARRAY=22
    LPAREN=23
    RPAREN=24
    LBRACE=25
    RBRACE=26
    LBRACKET=27
    RBRACKET=28
    SEMI=29
    COMMA=30
    QUOTE=31
    DQUOTE=32
    COLON=33
    ASSIGN=34
    ADD=35
    SUB=36
    CLAIM=37
    CONCAT=38
    READINTEGER=39
    PRINTINTEGER=40
    READFLOAT=41
    WRITEFLOAT=42
    READBOOLEAN=43
    PRINTBOOLEAN=44
    READSTRING=45
    PRINTSTRING=46
    SUPER=47
    PREVENTDEFAULT=48
    CSTYLE=49
    LINECOMMENT=50
    BOOLEANLIT=51
    IDENTIFIER=52
    INTLIT=53
    FLOATLIT=54
    DOT=55
    STRINGLIT=56
    UNCLOSE_STRING=57
    ILLEGAL_ESCAPE=58
    WS=59
    ERROR_CHAR=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declarationList(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationListContext,0)


        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.declarationList()
            self.state = 127
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationContext,0)


        def declarationList(self):
            return self.getTypedRuleContext(MT22Parser.DeclarationListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declarationList




    def declarationList(self):

        localctx = MT22Parser.DeclarationListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declarationList)
        try:
            self.state = 133
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.declaration()
                self.state = 130
                self.declarationList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.VarDeclarationContext,0)


        def funcDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.FuncDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_declaration




    def declaration(self):

        localctx = MT22Parser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 137
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.varDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 136
                self.funcDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def initVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.InitVarDeclarationContext,0)


        def fullVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.FullVarDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varDeclaration




    def varDeclaration(self):

        localctx = MT22Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.initVarDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.fullVarDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idList(self):
            return self.getTypedRuleContext(MT22Parser.IdListContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typeSpecifier(self):
            return self.getTypedRuleContext(MT22Parser.TypeSpecifierContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_initVarDeclaration




    def initVarDeclaration(self):

        localctx = MT22Parser.InitVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_initVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.idList()
            self.state = 144
            self.match(MT22Parser.COLON)
            self.state = 145
            self.typeSpecifier()
            self.state = 146
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FullVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def SEMI(self):
            return self.getToken(MT22Parser.SEMI, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_fullVarDeclaration




    def fullVarDeclaration(self):

        localctx = MT22Parser.FullVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fullVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.helper()
            self.state = 149
            self.match(MT22Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseVarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def typeSpecifier(self):
            return self.getTypedRuleContext(MT22Parser.TypeSpecifierContext,0)


        def ASSIGN(self):
            return self.getToken(MT22Parser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_baseVarDeclaration




    def baseVarDeclaration(self):

        localctx = MT22Parser.BaseVarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_baseVarDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(MT22Parser.IDENTIFIER)
            self.state = 152
            self.match(MT22Parser.COLON)
            self.state = 153
            self.typeSpecifier()
            self.state = 154
            self.match(MT22Parser.ASSIGN)
            self.state = 155
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def expression(self):
            return self.getTypedRuleContext(MT22Parser.ExpressionContext,0)


        def baseVarDeclaration(self):
            return self.getTypedRuleContext(MT22Parser.BaseVarDeclarationContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_helper




    def helper(self):

        localctx = MT22Parser.HelperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_helper)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(MT22Parser.IDENTIFIER)
                self.state = 158
                self.match(MT22Parser.COMMA)
                self.state = 159
                self.helper()
                self.state = 160
                self.match(MT22Parser.COMMA)
                self.state = 161
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 163
                self.baseVarDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idList(self):
            return self.getTypedRuleContext(MT22Parser.IdListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idList




    def idList(self):

        localctx = MT22Parser.IdListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idList)
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 166
                self.match(MT22Parser.IDENTIFIER)
                self.state = 167
                self.match(MT22Parser.COMMA)
                self.state = 168
                self.idList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 169
                self.match(MT22Parser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(MT22Parser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def BOOLEAN(self):
            return self.getToken(MT22Parser.BOOLEAN, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_atomicType




    def atomicType(self):

        localctx = MT22Parser.AtomicTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atomicType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.BOOLEAN) | (1 << MT22Parser.FLOAT) | (1 << MT22Parser.INTEGER) | (1 << MT22Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ARRAY(self):
            return self.getToken(MT22Parser.ARRAY, 0)

        def LBRACKET(self):
            return self.getToken(MT22Parser.LBRACKET, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def RBRACKET(self):
            return self.getToken(MT22Parser.RBRACKET, 0)

        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arrayType




    def arrayType(self):

        localctx = MT22Parser.ArrayTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_arrayType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(MT22Parser.ARRAY)
            self.state = 175
            self.match(MT22Parser.LBRACKET)
            self.state = 176
            self.dimensions()
            self.state = 177
            self.match(MT22Parser.RBRACKET)
            self.state = 178
            self.match(MT22Parser.OF)
            self.state = 179
            self.atomicType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VoidTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_voidType




    def voidType(self):

        localctx = MT22Parser.VoidTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_voidType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(MT22Parser.VOID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AutoTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_autoType




    def autoType(self):

        localctx = MT22Parser.AutoTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_autoType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(MT22Parser.AUTO)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimensionsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def dimensions(self):
            return self.getTypedRuleContext(MT22Parser.DimensionsContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_dimensions




    def dimensions(self):

        localctx = MT22Parser.DimensionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dimensions)
        try:
            self.state = 189
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 185
                self.match(MT22Parser.INTLIT)
                self.state = 186
                self.match(MT22Parser.COMMA)
                self.state = 187
                self.dimensions()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 188
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def autoType(self):
            return self.getTypedRuleContext(MT22Parser.AutoTypeContext,0)


        def atomicType(self):
            return self.getTypedRuleContext(MT22Parser.AtomicTypeContext,0)


        def arrayType(self):
            return self.getTypedRuleContext(MT22Parser.ArrayTypeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_typeSpecifier




    def typeSpecifier(self):
